syntax = "proto3";

option java_multiple_files = true;
option java_package = "id.paytech.registration";
option java_outer_classname = "RegistrationProto";

package id.paytech.registration;

service RegistrationService {
  rpc RegisterToken(RegisterTokenRequest) returns (RegisterTokenReply) {}
  rpc UnregisterToken(UnregisterTokenRequest) returns (UnregisterTokenReply) {}
  rpc GenerateOtpSeed(GenSeedRequest) returns (GenSeedReply) {}
  rpc RemoveLinkage(RemoveLinkageRequest) returns (RemoveLinkageReply) {}
}

message RegisterTokenRequest {
  string clientId  = 1;
  string subject   = 2;
  string token     = 3;
  int64  expiredAt = 4;
}

message RegisterTokenReply {
  string clientId = 1;
  string subject  = 2;
  int32 code      = 3;
  string message  = 4;
}


message UnregisterTokenRequest {
  string clientId  = 1;
  string subject   = 2;
  string reason    = 3;
}

message UnregisterTokenReply {
  string clientId = 1;
  string subject  = 2;
  int32 code      = 3;
  string message  = 4;
}

message GenSeedRequest {
  string clientId = 1;
  string subject  = 2;
}

message GenSeedReply {
  string clientId = 1;
  string subject  = 2;
  int32 code      = 3;
  string message  = 4;
  string seed     = 5;
}

message RemoveLinkageRequest {
  string clientId = 1;
  string subject  = 2;
  string reason   = 3;
}

message RemoveLinkageReply {
  string clientId = 1;
  string subject  = 2;
  int32 code      = 3;
  string message  = 4;
}